# flo-cli

./: .gitignore  Cargo.toml  README.md  test_parse.rs
src/: api.rs  download.rs  main.rs  obsidian.rs  prompts.rs  status.rs
