[package]
name = "flo-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.5.4", features = ["derive"] } # For CLI argument parsing
tokio = { version = "1.35", features = ["full"] } # Async runtime for API calls
reqwest = { version = "0.11", features = ["json"] } # HTTP client for Veo/Flow
serde = { version = "1.0", features = ["derive"] } # JSON serialization
serde_json = "1.0" # JSON parsing
dotenv = "0.15" # Local environment variable management
indicatif = "0.17"
